--- a/frontend/src/appPages/site/components/pages/profile/Profile/Profile.module.scss
+++ b/frontend/src/appPages/site/components/pages/profile/Profile/Profile.module.scss
@@ -89,12 +89,6 @@
   color: #333333;
 }
 
-.userAbout {
-  font-size: 16px;
-  color: #666666;
-  margin-bottom: 20px;
-}
-
 .editButton {
   background-color: #4a90e2;
   color: #ffffff;
@@ -153,8 +147,7 @@
     color: #555555;
   }
 
-  input,
-  textarea {
+  input {
     width: 100%;
     padding: 10px;
     border: 1px solid #dddddd;
@@ -166,11 +159,6 @@
       border-color: #4a90e2;
       box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
     }
-  }
-
-  textarea {
-    resize: vertical;
-    min-height: 100px;
   }
 }
 
