--- a/backend/templates/account/base.html
+++ b/backend/templates/account/base.html
@@ -185,7 +185,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="https://3-gymnasium.kg/" class="logo">
-                    <img src="{% static 'images/6W3A8900.jpg' %}" alt="Логотип">
+                    <img src="{% static 'static/images/6W3A8900.jpg' %}" alt="Логотип">
                     <span>Гимназия №3</span>
                 </a>
                 <nav class="nav">
