--- a/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
@@ -37,6 +37,7 @@
           width: 380px;
           height: 258px;
           border-radius: 10px;
+          object-fit: cover;
 
           &:hover {
             transform: scale(1.01);
