--- a/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
@@ -34,8 +34,10 @@
       .galleryItem {
         img {
           cursor: pointer;
-          width: 380px;
-          height: 258px;
+          width: 100%;
+          height: auto;
+          max-width: 380px;
+          max-height: 258px;
           border-radius: 10px;
           object-fit: cover;
 
@@ -78,7 +80,6 @@
 @media (max-width: 430px) {
   .GalleryMainContent {
     .gallery_card {
-      overflow-x: auto;
       grid-template-columns: repeat(6, 1fr) !important;
     }
   }
@@ -87,8 +88,8 @@
 @media (max-width: 884px) {
   .GalleryMainContent {
     .gallery_card {
-      overflow-x: auto;
-      grid-template-columns: repeat(6, 1fr) !important;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) !important;
+      gap: 16px;
     }
   }
 }
