--- a/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
@@ -32,6 +32,9 @@
       gap: 24px;
 
       .galleryItem {
+          width: 100%;
+          height: auto;
+          aspect-ratio: 380 / 258;
         img {
           cursor: pointer;
           width: 100%;
@@ -40,6 +43,7 @@
           max-height: 258px;
           border-radius: 10px;
           object-fit: cover;
+          aspect-ratio: 380 / 258;
 
           &:hover {
             transform: scale(1.01);
@@ -80,7 +84,7 @@
 @media (max-width: 430px) {
   .GalleryMainContent {
     .gallery_card {
-      grid-template-columns: repeat(6, 1fr) !important;
+      grid-template-columns: repeat(6, 1fr);
     }
   }
 }
@@ -88,8 +92,14 @@
 @media (max-width: 884px) {
   .GalleryMainContent {
     .gallery_card {
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) !important;
+        display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
       gap: 16px;
+    }
+      .galleryItem {
+      flex: 0 0 calc(50% - 8px);
+      max-width: 380px;
     }
   }
 }
