--- a/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GalleryContent/GalleryContent.module.scss
@@ -28,19 +28,22 @@
     .gallery_card {
       margin-top: 42px;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(3, 1fr);
       gap: 24px;
-      justify-content: center;
 
       .galleryItem {
+        position: relative;
         width: 100%;
-        aspect-ratio: 380 / 258;
+        padding-top: 67.89%; // Соотношение сторон 380:258
 
         img {
+          position: absolute;
+          top: 0;
+          left: 0;
           width: 100%;
           height: 100%;
-          border-radius: 10px;
           object-fit: cover;
+          border-radius: 10px;
           cursor: pointer;
           transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -82,7 +85,7 @@
 @media (max-width: 884px) {
   .GalleryMainContent {
     .gallery_card {
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 }
