--- a/frontend/src/appPages/site/components/pages/gallery/GalleryMainContent/GalleryMainContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/gallery/GalleryMainContent/GalleryMainContent.module.scss
@@ -101,72 +101,75 @@
     .modalContent {
       position: relative;
       width: 90%;
-      max-width: 800px;
-      max-height: 90%;
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      overflow: hidden;
+      height: 90%;
+      max-width: 1200px;
+      max-height: 90vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-      img {
-        border-radius: 10px;
+      .imageContainer {
+        position: relative;
+        width: 100%;
+        height: 100%;
       }
 
       .closeButton {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: -40px;
+        right: -40px;
         background: none;
         border: none;
-        font-size: 24px;
+        font-size: 32px;
         cursor: pointer;
-        color: #333;
-      }
-
-      .videoWrapper {
-        position: relative;
-        padding-top: 56.25%; // Соотношение сторон 16:9
-        width: 100%;
-        height: 0;
-
-        iframe,
-        video {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-        }
+        color: #fff;
+        z-index: 1001;
       }
 
       .navButton {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        background: rgba(0, 0, 0, 0.5);
+        background: rgba(255, 255, 255, 0.3);
         border: none;
         border-radius: 50%;
         width: 50px;
         height: 50px;
-        color: #fff;
         display: flex;
         justify-content: center;
         align-items: center;
         cursor: pointer;
         transition: background 0.3s;
-        font-size: 24px;
+        font-size: 32px;
+        color: #fff;
+        z-index: 1001;
 
         &:hover {
-          background: rgba(0, 0, 0, 0.7);
+          background: rgba(255, 255, 255, 0.5);
+        }
+
+        &.prevButton {
+          left: -70px;
+        }
+
+        &.nextButton {
+          right: -70px;
         }
       }
 
-      .prevButton {
-        left: 10px;
-      }
+      .videoWrapper {
+        position: relative;
+        width: 100%;
+        height: 0;
+        padding-bottom: 56.25%; // Соотношение сторон 16:9
 
-      .nextButton {
-        right: 10px;
+        > div {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
@@ -184,18 +187,28 @@
       }
     }
 
-    .modalContent {
-      padding: 10px;
-    }
+    .modalOverlay {
+      .modalContent {
+        .closeButton {
+          top: 10px;
+          right: 10px;
+          font-size: 24px;
+        }
 
-    .navButton {
-      width: 40px;
-      height: 40px;
-      font-size: 20px;
-    }
+        .navButton {
+          width: 40px;
+          height: 40px;
+          font-size: 20px;
 
-    .closeButton {
-      font-size: 24px;
+          &.prevButton {
+            left: 10px;
+          }
+
+          &.nextButton {
+            right: 10px;
+          }
+        }
+      }
     }
   }
 
