--- a/frontend/src/appPages/site/components/pages/gallery/GalleryMainContent/GalleryMainContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/gallery/GalleryMainContent/GalleryMainContent.module.scss
@@ -62,7 +62,7 @@
       .galleryItem {
         position: relative;
         width: 100%;
-        padding-bottom: 66.66%; // Соотношение сторон 3:2
+        padding-bottom: 66.66%; // Aspect ratio 3:2
         overflow: hidden;
         border-radius: 10px;
         cursor: pointer;
@@ -207,7 +207,7 @@
         position: relative;
         width: 100%;
         height: 0;
-        padding-bottom: 56.25%; // Соотношение сторон 16:9
+        padding-bottom: 56.25%; // Aspect ratio 16:9
 
         > div {
           position: absolute;
